src/objects/Post_Install_Script_Config__mdt.object
<CustomObject>
    <fields>
        <fullName>SF_Package_Version__c</fullName>
        <label>SF Package Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Script_Type__c</fullName>
        <label>Script Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Synchronous</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Batch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scripts_To_Run__c</fullName>
        <description>Comma separated names of scripts to run</description>
        <inlineHelpText>Comma separated names of scripts to run</inlineHelpText>
        <label>Scripts To Run</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Post Install Script Config</label>
    <pluralLabel>Post Install Script Configs</pluralLabel>
</CustomObject>